# voxa-cue

./: .editorconfig  .gitignore  AGENTS.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .env.example  README.md  app.ts  package.json  tsconfig.json
api/api/: index.ts
api/src/: app.ts  create-app.ts  http.ts  index.ts  openai.ts  prompts.ts  schemas.ts
api/test/: app.test.ts  contracts.test.ts  fixtures.ts  http.test.ts  openai.test.ts
contracts/: ble-v1.md  coach-chat-v1.schema.json  deck-plan-v1.schema.json  insight-v1.schema.json  roadmap-v1.schema.json
design/brand/: manifest.json
docs/: APP_REVIEW_NOTES.md  BACKEND_AUDIT.md  PRIVACY_POLICY.md  PRODUCT_ARCHITECTURE.md  RELEASE_CHECKLIST.md  REPOSITORY_AUDIT.md  SETUP_GUIDE.md  SUPPORT.md  TERMS_OF_USE.md
firmware/imu-diagnostic/: README.md  platformio.ini
firmware/voxa-wearable/: README.md  platformio.ini
firmware/voxa-wearable-nrf54/: README.md  platformio.ini
firmware/voxa-wearable-nrf54/zephyr/: CMakeLists.txt  prj.conf
firmware/voxa-wearable-nrf54/zephyr/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
ios/: project.yml
ios/Config/: BuildSettings.xcconfig  BuildSettings.xcconfig.example  ReleaseBuildSettings.xcconfig  Signing.xcconfig.example
ios/StoreKit/: VoxaCue.storekit
ios/VoxaCueTests/: AppBehaviorTests.swift  (+2 more)
ml/gesture-classifier/: .gitignore  README.md  pyproject.toml
ml/gesture-classifier/configs/: collection-v1.json  labels-v1.json
ml/gesture-classifier/data/: .gitignore  README.md
ml/gesture-classifier/notebooks/: Voxa_Gesture_Classifier_Colab.ipynb  build_notebook.py  verify_notebook.py
ml/gesture-classifier/recorder/: app.mjs  index.html  recorder-core.mjs  recorder-core.test.mjs  serve.sh  styles.css
ml/gesture-classifier/schemas/: recording-v1.schema.json
ml/gesture-classifier/src/voxa_gesture/: __init__.py  artifact.py  cli.py  features.py  modeling.py  schema.py  synthetic.py
ml/gesture-classifier/tests/: conftest.py  test_features.py  test_modeling_artifact.py  test_schema.py
scripts/: install-ios-device.sh  run-ble-debug.sh  verify-ios-release.sh
tools/ble-debug/: app.mjs  (+3 more)
(+76 files in other folders)
